--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,1 @@
-language: go
-script:
- - curl https://raw.github.com/daaku/go.travis/master/install | sh
+script: curl https://raw.github.com/daaku/go.travis/master/install | sh
