--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,6 @@
-script: curl https://raw.github.com/daaku/go.travis/master/install | sh
+language: go
+go:
+  - 1.1
+  - 1.2
+script:
+ - curl https://raw.github.com/daaku/go.travis/master/install | sh
