--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,10 @@ language: go
 go:
   - 1.4
 
-matrix:
-  fast_finish: true
-
 before_install:
-  - go get -v code.google.com/p/go.tools/cmd/vet
+  - go get -v golang.org/x/tools/cmd/vet
+  - go get -v golang.org/x/tools/cmd/cover
   - go get -v github.com/golang/lint/golint
-  - go get -v code.google.com/p/go.tools/cmd/cover
 
 install:
   - go install -race -v std
